fix: Move _site/ to docs/ directory

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: Reinhart Previano K.
 description: Blog repository
 
+destination: docs/
+
 plugins:
   - jekyll-archives
 #  - jekyll-sitemap
