--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,10 @@ image: alpine:latest
 pages:
   stage: deploy
   script:
-  - echo 'Nothing to do...'
+    - cp -r docs public
   artifacts:
     paths:
-    - docs
+      - public
     expire_in: 1 day
   only:
-  - master
+    - master
