--- a/_data/colors.yml
+++ b/_data/colors.yml
@@ -31,6 +31,17 @@ light_blue:
   "700": "#0369A1"
   "800": "#075985"
   "900": "#0C4A6E"
+orange:
+  "50": "#FFF7ED"
+  "100": "#FFEDD5"
+  "200": "#FED7AA"
+  "300": "#FDBA74"
+  "400": "#FDBA74"
+  "500": "#C2410C"
+  "600": "#EA580C"
+  "700": "#C2410C"
+  "800": "#9A3412"
+  "900": "#7C2D12"
 red:
   "50": "#FEF2F2"
   "100": "#FEE2E2"
@@ -53,3 +64,15 @@ teal:
   "700": "#0D9488"
   "800": "#115E59"
   "900": "#134E4A"
+
+reinhart_blue:
+  "50": "#e3f2ff"
+  "100": "#badeff"
+  "200": "#8dcaff"
+  "300": "#5EEAD4"
+  "400": "#36a4ff"
+  "500": "#0094ff"
+  "600": "#0a87f0"
+  "700": "#0c74dd"
+  "800": "#0e63cb"
+  "900": "#0d44ac"
