--- a/_data/colors.yml
+++ b/_data/colors.yml
@@ -36,8 +36,8 @@ orange:
   "100": "#FFEDD5"
   "200": "#FED7AA"
   "300": "#FDBA74"
-  "400": "#FDBA74"
-  "500": "#C2410C"
+  "400": "#FB923C"
+  "500": "#F97316"
   "600": "#EA580C"
   "700": "#C2410C"
   "800": "#9A3412"
@@ -64,6 +64,28 @@ teal:
   "700": "#0D9488"
   "800": "#115E59"
   "900": "#134E4A"
+violet:
+  "50": "#F5F3FF"
+  "100": "#EDE9FE"
+  "200": "#DDD6FE"
+  "300": "#C4B5FD"
+  "400": "#A78BFA"
+  "500": "#8B5CF6"
+  "600": "#7C3AED"
+  "700": "#6D28D9"
+  "800": "#5B21B6"
+  "900": "#4C1D95"
+yellow:
+  "50": "#FEFCE8"
+  "100": "#FEF9C3"
+  "200": "#FEF08A"
+  "300": "#FDE047"
+  "400": "#FACC15"
+  "500": "#EAB308"
+  "600": "#CA8A04"
+  "700": "#A16207"
+  "800": "#854D0E"
+  "900": "#713F12"
 
 reinhart_blue:
   "50": "#e3f2ff"
