feat: Add more icons

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -6,7 +6,7 @@ binus:
   theme_color: 
     primary: "#008ed3"
     secondary: "#D97706"
-codenewbie-community:
+codenewbie:
   name: "CodeNewbie Community Blog Archives"
   theme_color: "#6bd80b"
 char6013:
