feat: Reorganize posts

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -42,6 +42,10 @@ kotakode:
   theme_color: 
     primary: "#47b881"
     secondary: "#fa883a"
+mat:
+  name: "Mobile Application and Technology, BINUS University"
+  theme_color: "#fde047"
+  theme_color_foreground: "#713f12"
 medium:
   name: "Medium Blog Archives"
   theme_color: "#000000"
@@ -52,6 +56,10 @@ openstreetmap:
 projects:
   name: "<i class='fa fa-briefcase' aria-hidden='true'></i> Project Announcements and Archive"
   theme_color: "#ff4d4f"
+rebrand20:
+  name: "<u>@reinhart1010</u>'s 20th Birthday Rebrand Exploration"
+  theme_color_foreground: "#67e8f9"
+  theme_color: "#164e63"
 socs:
   name: "School of Computer Science (SOCS), BINUS UNIVERSITY"
   theme_color: 
